commit translated contents

--- a/Teams/business-voice/index.yml
+++ b/Teams/business-voice/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Hub
-title: Microsoft 365 Teams телефонная система документации по плану звонков
-summary: Узнайте, как спланировать, настроить и использовать Телефонная система Microsoft Teams System с тарифным планом в организации. Teams телефонная система с тарифным планом позволяет небольшим и средним организациям легко настроить мощную и гибкую телефонную систему без затрат и сложности внутренних решений.
+title: Документация по телефонной системе Microsoft 365 Teams с планом звонков
+summary: Узнайте, как спланировать, настроить и использовать Телефонная система Microsoft Teams System с тарифным планом в организации. Телефонная система Teams с планом звонков позволяет небольшим и средним организациям легко настроить мощную и гибкую телефонную систему без затрат и сложности внутренних решений.
 metadata:
   title: Телефонная система Microsoft Teams system with Calling Plan documentation
   description: Узнайте, как планировать, развертывать и использовать Телефонная система Microsoft Teams System с тарифным планом.
@@ -8,36 +8,36 @@ metadata:
   author: dstrome
   ms.author: dstrome
   ms.date: 06/17/2020
-  ms.openlocfilehash: 3ddbe9ac2d6882cef72f9aa3b3bc7a5a2525e0d2
-  ms.sourcegitcommit: e38dc23e3968f55625e90c8883884045f80d22ee
+  ms.openlocfilehash: e1d1ceffeeaed9d2f6175ce2c7755349c756207c
+  ms.sourcegitcommit: 6754f2d11da0afff067f0872acf778a83fd1595e
   ms.translationtype: MT
   ms.contentlocale: ru-RU
-  ms.lasthandoff: 06/16/2022
-  ms.locfileid: "66124154"
+  ms.lasthandoff: 09/19/2022
+  ms.locfileid: "67808230"
 productDirectory:
   items:
   - title: Обзор
-    imageSrc: https://docs.microsoft.com/office/media/icons/blocks-blue.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/blocks-blue.svg
     links:
     - url: whats-business-voice.md
-      text: Teams телефонная система с рекомендациями по тарифным планам для малого и среднего бизнеса
+      text: Телефонная система Teams с руководством по плану звонков для малого и среднего бизнеса
     - url: https://www.microsoft.com/microsoft-teams/microsoft-teams-phone
       text: Телефонная система Microsoft Teams
     - url: /office365/servicedescriptions/teams-service-description
-      text: Teams службы
+      text: Описание службы Teams
   - title: Настройка
-    imageSrc: https://docs.microsoft.com/office/media/icons/deploy-blue.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/deploy-blue.svg
     links:
     - url: ./whats-business-voice.md#how-do-i-purchase-teams-phone-with-calling-plan-bundle-licenses
-      text: Как получить Teams телефонная система с тарифным планом
+      text: Как получить телефонную систему Teams с планом звонков
     - url: get-ready-internet.md
       text: Проверка подключения к Интернету
     - url: prepare-users.md
       text: Подготовка пользователей
     - url: set-up-overview.md
-      text: Настройка Teams телефонная система с тарифным планом
+      text: Настройка телефонной системы Teams с планом звонков
   - title: Настройка установки
-    imageSrc: https://docs.microsoft.com/office/media/icons/migration-blue.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/migration-blue.svg
     links:
     - url: port-phone-numbers.md
       text: Перенос существующих телефонных номеров
@@ -48,7 +48,7 @@ productDirectory:
     - url: ./create-a-phone-system-call-queue-smb.md
       text: Настройка очередей звонков
   - title: Использование
-    imageSrc: https://docs.microsoft.com/office/media/icons/get-started-blue.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/get-started-blue.svg
     links:
     - url: create-users.md
       text: Создание дополнительных пользователей
@@ -59,26 +59,26 @@ productDirectory:
     - url: analytics-dashboard.md
       text: Панель мониторинга качества аналитики звонков
   - title: Ресурсы для партнеров
-    imageSrc: https://docs.microsoft.com/office/media/icons/success-blue.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/success-blue.svg
     links:
     - url: /partner-center/
       text: Получение Microsoft 365 бизнес в Центре партнеров
     - url: https://cloudpartners.transform.microsoft.com/products/m365-business-voice-partner-playbook
-      text: Microsoft 365 Teams телефонная система с сборником схем партнера плана звонков
+      text: Сборник схем microsoft 365 Teams Для телефонной системы с планом звонков для партнеров
   - title: Нужна помощь?
-    imageSrc: https://docs.microsoft.com/office/media/icons/users-people.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/users-people.svg
     links:
     - url: https://support.office.com/article/Contact-support-for-business-products-Admin-Help-32a17ca7-6fa0-4870-8a8d-e25ba4ccfd4b
       text: Обращение в службу поддержки Microsoft 365 или Office 365
     - url: https://techcommunity.microsoft.com/t5/Small-and-Medium-Businesses/ct-p/SMB
       text: Техническое сообщество для малого и среднего бизнеса
   - title: Справочная документация
-    imageSrc: https://docs.microsoft.com/office/media/icons/chat.svg
+    imageSrc: https://learn.microsoft.com/office/media/icons/chat.svg
     links:
     - url: ../cloud-voice-landing-page.md
       text: Документы для администраторов Microsoft Teams
     - url: https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472
-      text: Microsoft Teams обратной связи
+      text: Портал отзывов Microsoft Teams
     - url: https://support.office.com/teams
       text: Документы по клиентам Microsoft Teams
     - url: /office365/admin/
