--- a/Teams/upgrade-skype-teams.yml
+++ b/Teams/upgrade-skype-teams.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Hub
 title: Планирование обновления с Skype для бизнеса до Microsoft Teams
-summary: 'Microsoft Teams предназначен для обеспечения бесперебойной связи, бесперебойной совместной работы и упрощения работы в безопасном и соответствии требованиям— все это в одном месте. Здесь вы найдете рекомендации, учебные курсы и ресурсы по успешному обновлению с Skype для бизнеса до Teams.'
+summary: Microsoft Teams предназначена для того, чтобы помочь людям оставаться на связи, легко сотрудничать и упростить работу безопасным и совместимым способом — в одном месте. Здесь вы найдете рекомендации, учебные материалы и ресурсы по реализации успешного обновления с Skype для бизнеса до Teams.
 brand: teams
 metadata:
   title: Планирование обновления с Skype для бизнеса до Microsoft Teams
-  description: 'Microsoft Teams предназначен для обеспечения бесперебойной связи, бесперебойной совместной работы и упрощения работы в безопасном и соответствии требованиям— все это в одном месте. Здесь вы найдете рекомендации, учебные курсы и ресурсы по успешному обновлению с Skype для бизнеса до Teams.'
+  description: Microsoft Teams предназначена для того, чтобы помочь людям оставаться на связи, легко сотрудничать и упростить работу безопасным и совместимым способом — в одном месте. Здесь вы найдете рекомендации, учебные материалы и ресурсы по реализации успешного обновления с Skype для бизнеса до Teams.
   ms.service: msteams
   ms.topic: hub-page
   author: SerdarSoysal
@@ -14,86 +14,92 @@ metadata:
   ms.reviewer: landerl
   audience: admin
   f1.keywords:
-    - NOCSH
+  - NOCSH
   ms.localizationpriority: high
   ms.collection:
-    - Teams_ITAdmin_JourneyFromSfB
-    - M365-collaboration
+  - Teams_ITAdmin_JourneyFromSfB
+  - M365-collaboration
   search.appverid: MET150
   appliesto:
-    - Microsoft Teams
+  - Microsoft Teams
+  ms.openlocfilehash: c0d39f903ccbbc9383e22afc9ab619254c506ccc
+  ms.sourcegitcommit: 6754f2d11da0afff067f0872acf778a83fd1595e
+  ms.translationtype: MT
+  ms.contentlocale: ru-RU
+  ms.lasthandoff: 09/19/2022
+  ms.locfileid: "67808600"
 highlightedContent:
   items:
-    - title: Использование проверенных рекомендаций для успешного обновления
-      itemType: how-to-guide
-      url: ./upgrade-framework.md
-    - title: Регистрация для бесплатных семинаров по планированию обновления
-      itemType: learn
-      url: 'https://aka.ms/upgradeworkshops'
-    - title: 'Узнайте, как black & Veatch transitioned to Teams за восемь недель'
-      itemType: video
-      url: 'https://play.vidyard.com/uc42D4WD4byc3sHTiKEEEk'
+  - title: Использование проверенных рекомендаций для успешного обновления
+    itemType: how-to-guide
+    url: ./upgrade-framework.md
+  - title: Регистрация для проведения бесплатных семинаров по планированию обновления
+    itemType: learn
+    url: https://aka.ms/upgradeworkshops
+  - title: Узнайте, как & Veatch в Teams за восемь недель
+    itemType: video
+    url: https://play.vidyard.com/uc42D4WD4byc3sHTiKEEEk
 productDirectory:
-  title: Ресурсы для планирования успешного Teams и после него
-  summary: 'Правильная техническая среда, стабильное внедрение пользователей и реализация бизнес-целей начинаются с правильного планирования.'
+  title: Ресурсы для планирования успешного обновления Teams и более поздних версий
+  summary: Работоспособная техническая среда, устойчивое внедрение пользователей и реализация бизнес-целей начинаются с надлежащего планирования.
   items:
-    - title: Teams обновлений
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/users-people.svg'
-      links:
-        - url: 'https://customers.microsoft.com/story/813525-dsm-discrete-manufacturing-technical-teams'
-          text: Royal DSM — Skype для бизнеса Server Teams
-        - url: 'https://customers.microsoft.com/story/799203-ikea-retailers-teams'
-          text: МНА — Skype для бизнеса Server Teams
-        - url: 'https://customers.microsoft.com/story/782385-williams-energy-teams'
-          text: 1 — Skype для бизнеса Server Teams
-        - url: 'https://customers.microsoft.com/story/765513-trek-retailers-teams'
-          text: 'Так, Skype для бизнеса Online для Teams'
-        - url: 'https://customers.microsoft.com/story/765520-dentsu-aegis-network-media-entertainment-teams'
-          text: Den дениз Aegis Network — Skype для бизнеса Online для Teams
-        - url: 'https://customers.microsoft.com/story/764851-berkshire-healthcare-nhs-foundation-trust-health-provider-teams'
-          text: Berkcare Healthcare — Skype для бизнеса Online для Teams
-    - title: 'Ignite Session: проектирование пути к Teams'
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/walkthrough-map-teams.svg'
-      summary: 'Этот сеанс в Ignite 2020 поможет вам найти подход, наиболее подходящий Skype для бизнеса реализации и целям.'
-      url: 'https://go.microsoft.com/fwlink/?linkid=2154668'
-    - title: Комплект успешного обновления
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/success-teams.svg'
-      summary: 'Скачайте материалы о готовности пользователей, включая шаблоны обращений, опросы пользователей, образцы планов тестирования проекта и пилотного тестирования.'
-      url: 'https://aka.ms/UpgradeSuccessKit'
-    - title: Teams документации администратора
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/document-teams.svg'
-      summary: 'Узнайте, как свести пользователей к работе и Teams управлять ими, а также подготовить пользователей к новым взаимодействиям и совместной работе.'
-      url: ./index.yml
-    - title: Обучение с инструктором Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/presenter-with-podium.svg'
-      summary: 'Бесплатные интерактивные учебные курсы, разработанные для обучения работе с Teams.'
-      url: ./instructor-led-training-teams-landing-page.yml
-    - title: Разорите Teams сценариев
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/best-practices-teams.svg'
-      summary: 'Наши Teams на интерактивном совещании по мелку, чтобы помочь ИТ-Teams.'
-      url: ./chalk-talks-landing-page.yml
-    - title: Прекращение поддержки Skype для бизнеса Online
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/migration-teams.svg'
-      summary: 'Подготовьтесь к выходу из службы Skype для бизнеса Online от 31 июля 2021 г. и узнайте, как спланировать успешный переход на Teams.'
-      url: ./skype-for-business-online-retirement.md
-    - title: Microsoft Teams блога
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/blog-site-teams.svg'
-      summary: 'Изучите методики, новости и тенденции непосредственно от группы, Microsoft Teams.'
-      url: 'https://techcommunity.microsoft.com/t5/microsoft-teams-blog/bg-p/MicrosoftTeamsBlog'
-    - title: Общее влияние на Teams
-      imageSrc: 'https://docs.microsoft.com/office/media/icons/trend-graph-teams.svg'
-      summary: В отчете Forrester Research можно оценить улучшения производительности сотрудников и компании после Teams.
-      url: 'https://www.microsoft.com/microsoft-365/blog/wp-content/uploads/sites/2/2019/04/Total-Economic-Impact-Microsoft-Teams.pdf'
+  - title: Истории обновления Teams
+    imageSrc: https://learn.microsoft.com/office/media/icons/users-people.svg
+    links:
+    - url: https://customers.microsoft.com/story/813525-dsm-discrete-manufacturing-technical-teams
+      text: Управление DSM в Skype для бизнеса Server Teams
+    - url: https://customers.microsoft.com/story/799203-ikea-retailers-teams
+      text: ПРИ — Skype для бизнеса Server в Teams
+    - url: https://customers.microsoft.com/story/782385-williams-energy-teams
+      text: Америка — Skype для бизнеса Server в Teams
+    - url: https://customers.microsoft.com/story/765513-trek-retailers-teams
+      text: Из Skype для бизнеса Online в Teams
+    - url: https://customers.microsoft.com/story/765520-dentsu-aegis-network-media-entertainment-teams
+      text: Dentsu Aegis Network — Skype для бизнеса Online в Teams
+    - url: https://customers.microsoft.com/story/764851-berkshire-healthcare-nhs-foundation-trust-health-provider-teams
+      text: Berkcare Healthcare — Skype для бизнеса Online в Teams
+  - title: 'Ignite Session: Проектирование пути к Teams'
+    imageSrc: https://learn.microsoft.com/office/media/icons/walkthrough-map-teams.svg
+    summary: Этот сеанс Ignite 2020 поможет вам найти подход, наиболее подходящий для Skype для бизнеса реализации и целей.
+    url: https://go.microsoft.com/fwlink/?linkid=2154668
+  - title: Пакет успешного обновления
+    imageSrc: https://learn.microsoft.com/office/media/icons/success-teams.svg
+    summary: Скачайте материалы по подготовке пользователей, включая шаблоны коммуникаций, опросы пользователей, примеры проектов и пилотных планов тестирования.
+    url: https://aka.ms/UpgradeSuccessKit
+  - title: Документация для администраторов Teams
+    imageSrc: https://learn.microsoft.com/office/media/icons/document-teams.svg
+    summary: Узнайте, как развертывать Teams и управлять ими, а также подготавливать пользователей к новым взаимодействиям и взаимодействиям.
+    url: ./index.yml
+  - title: Обучение Teams под руководством инструктора
+    imageSrc: https://learn.microsoft.com/office/media/icons/presenter-with-podium.svg
+    summary: Бесплатные, интерактивные и интерактивные учебные классы, предназначенные для работы с Teams.
+    url: ./instructor-led-training-teams-landing-page.yml
+  - title: Расширение сценариев Teams
+    imageSrc: https://learn.microsoft.com/office/media/icons/best-practices-teams.svg
+    summary: Наши онлайн-семинары teams Chalk Talks предназначены для того, чтобы помочь ИТ-специалистам максимально эффективно использовать Teams.
+    url: ./chalk-talks-landing-page.yml
+  - title: Прекращение поддержки Skype для бизнеса Online
+    imageSrc: https://learn.microsoft.com/office/media/icons/migration-teams.svg
+    summary: Подготовьтесь к завершению работы службы Skype для бизнеса Online 31 июля 2021 г. и узнайте, как спланировать успешный переход на Teams.
+    url: ./skype-for-business-online-retirement.md
+  - title: Блог о Microsoft Teams
+    imageSrc: https://learn.microsoft.com/office/media/icons/blog-site-teams.svg
+    summary: Ознакомьтесь с рекомендациями, новостями и тенденциями непосредственно от команды, которая поддерживает Microsoft Teams.
+    url: https://techcommunity.microsoft.com/t5/microsoft-teams-blog/bg-p/MicrosoftTeamsBlog
+  - title: Общее экономические влияние Teams
+    imageSrc: https://learn.microsoft.com/office/media/icons/trend-graph-teams.svg
+    summary: Ознакомьтесь с отчетом Forrester Research, в котором показано, как повысить производительность сотрудников и компании после внедрения Teams.
+    url: https://www.microsoft.com/microsoft-365/blog/wp-content/uploads/sites/2/2019/04/Total-Economic-Impact-Microsoft-Teams.pdf
 additionalContent:
   sections:
-    - title: Нужна дополнительная помощь?
-    - items:
-        - title: Вовлечение FastTrack за помощью по развертыванию
-          summary: 'Если Teams по развертыванию требуется более подробная помощь, клиенты с подходящими подписками могут FastTrack за поддержкой.'
-          url: 'https://www.microsoft.com/fasttrack'
-        - title: Поиск партнера Майкрософт
-          summary: Нужны дополнительные рекомендации? Поставщики решений Майкрософт могут помочь вам управлять технической и логистикой при обновлении.
-          url: 'https://www.microsoft.com/solution-providers/home'
-        - title: Microsoft Teams и цены
-          summary: Найдите правильные Microsoft Teams для своей компании.
-          url: 'https://www.microsoft.com/en-us/microsoft-teams/compare-microsoft-teams-options'
+  - title: Нужна дополнительная помощь?
+  - items:
+    - title: Привлечение FastTrack для получения помощи в развертывании
+      summary: Когда проекты развертывания Teams требуют более подробной помощи, клиенты с соответствующими подписками могут обратиться за поддержкой к FastTrack.
+      url: https://www.microsoft.com/fasttrack
+    - title: Поиск партнера Майкрософт
+      summary: Требуются дополнительные рекомендации? Поставщики решений Майкрософт могут помочь в управлении техническими и логистическими параметрами обновления.
+      url: https://www.microsoft.com/solution-providers/home
+    - title: Планы и цены microsoft Teams
+      summary: Найдите нужные Microsoft Teams для своего бизнеса.
+      url: https://www.microsoft.com/en-us/microsoft-teams/compare-microsoft-teams-options
