--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1573,7 +1573,7 @@ items:
             href: purchase-third-party-apps.md
           - name: Adobe Acrobat в качестве средства просмотра PDF по умолчанию в Teams
             href: adobe-acrobat-pdf-viewer-teams.md
-          - name: Управление Microsoft 365 и настраиваемыми соединителями
+          - name: Управление соединителями M365 и пользовательскими соединителями
             href: Office-365-custom-connectors.md
           - name: Настройка фирменной символики приложения с помощью настройки приложения
             href: customize-apps.md
@@ -1603,8 +1603,6 @@ items:
                 href: teams-app-permission-policies.md
               - name: Управление политиками настройки приложений
                 href: teams-app-setup-policies.md
-              - name: управлять настраиваемыми политиками и параметрами приложений
-                href: teams-custom-app-policies-and-settings.md
           - name: Настройка приложения Teams для сотрудников без компьютеров
             href: /microsoft-365/frontline/pin-teams-apps-based-on-license?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
           - name: Обзор разрешений приложений Azure AD и предоставление согласия администратора
@@ -1615,8 +1613,6 @@ items:
             href: app-permissions.md
           - name: Настройка фирменного стиля магазина приложений вашей организации
             href: customize-your-app-store.md
-          - name: Управление доступом к приложениям в Microsoft 365
-            href: manage-third-party-teams-apps.md
           - name: Использование приложений в качестве внешних или гостевых пользователей
             href: non-standard-users.md
           - name: Управление запросами пользователей
