--- a/Teams/instructor-led-training-teams-landing-page.yml
+++ b/Teams/instructor-led-training-teams-landing-page.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Hub
-title: Обучение пользователей в Microsoft Teams
-summary: Размещенные на серверах Майкрософт бесплатные, интерактивные учебные занятия предназначены для подготовки к работе с Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы увидеть Microsoft Teams в действии, получить ответы на ваши вопросы и взаимодействовать с нашими динамическими преподавателями. Чтобы просмотреть наши учебные классы в свое время, посетите наше обучение пользователей по запросу. Выберите учебное занятие, чтобы зарегистрироваться.
+title: Обучение конечных пользователей для Microsoft Teams
+summary: Размещенные на серверах Майкрософт бесплатные, интерактивные учебные занятия предназначены для подготовки к работе с Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы увидеть Microsoft Teams в действии, получить ответы на свои вопросы и взаимодействовать с нашими динамическими инструкторами. Чтобы просмотреть наши учебные курсы в свое время, посетите наш учебный курс по запросу для пользователей. Выберите учебное занятие, чтобы зарегистрироваться.
 brand: teams
 metadata:
-  title: Обучение пользователей в Microsoft Teams
-  description: Корпорация Майкрософт с радостью предоставляет бесплатные, динамические виртуальные учебные классы, предназначенные для работы с Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы увидеть Microsoft Teams в действии, получить ответы на ваши вопросы и взаимодействовать с нашими динамическими преподавателями. Щелкните сеанс ниже, чтобы зарегистрироваться, и обязательно ознакомьтесь с дополнительными курсами ниже.
+  title: Обучение конечных пользователей для Microsoft Teams
+  description: Корпорация Майкрософт рада предоставить бесплатные, живые виртуальные учебные курсы, предназначенные для запуска и работы с Teams. Если вы являетесь лицом, принимающим решения в бизнесе, администратором, ИТ-специалистом или конечным пользователем, вы найдете занятия, которые вам подойдут. Присоединяйтесь к нам, чтобы увидеть Microsoft Teams в действии, получить ответы на свои вопросы и взаимодействовать с нашими динамическими инструкторами. Щелкните сеанс ниже, чтобы зарегистрироваться и обязательно ознакомьтесь с дополнительными курсами ниже.
   ms.topic: hub-page
   author: SerdarSoysal
   ms.author: samanro
   ms.date: 03/04/2022
-  ms.openlocfilehash: 40498cf75e601ae758ebf5d2e29371c3311f0558
-  ms.sourcegitcommit: 6754f2d11da0afff067f0872acf778a83fd1595e
+  ms.openlocfilehash: 47f899673165226952a5aae5f10c4df7ffc509f4
+  ms.sourcegitcommit: 95ed372915f259fddfc87090c6c67b549ed1605f
   ms.translationtype: MT
   ms.contentlocale: ru-RU
-  ms.lasthandoff: 09/19/2022
-  ms.locfileid: "67808740"
+  ms.lasthandoff: 11/11/2022
+  ms.locfileid: "68919644"
 highlightedContent:
   items:
   - title: Введение в Microsoft Teams
@@ -30,31 +30,31 @@ productDirectory:
   items:
   - title: Звонки и собрания в Teams
     imageSrc: https://learn.microsoft.com/office/media/icons/chat.svg
-    summary: 'Используйте звонки и собрания для совместной работы в режиме реального времени, обеспечения связи и доступа к общему содержимому в любое время для изучения, планирования и внедрения инноваций. (Уровень: Основы Teams; Аудитория: все)'
+    summary: 'Используйте звонки и собрания для совместной работы в режиме реального времени, поддержания связи и доступа к общему содержимому в любое время для изучения, планирования и внедрения инноваций. (Уровень: Основы Teams; Аудитория: Все)'
     url: https://aka.ms/CallingMeetingsTraining
   - title: Обзор команд и каналов в Teams
     imageSrc: https://learn.microsoft.com/office/media/icons/users-group.svg
-    summary: 'Узнайте о значении команд и каналов и о том, как они могут помочь вам в совместной работе в виртуальных рабочих областях или всей группе. (Уровень: Основы Teams; Аудитория: все)'
+    summary: 'Узнайте о ценности команд и каналов, а также о том, как они могут помочь вам в совместной работе в виртуальных рабочих областях или со всей группой. (Уровень: Основы Teams; Аудитория: Все)'
     url: https://aka.ms/TeamsChannelsTraining
   - title: Советы, сочетания клавиш и новые возможности Teams
     imageSrc: https://learn.microsoft.com/office/media/icons/lightbulb-idea-capture-teams.svg
-    summary: 'Ознакомьтесь с советами и сочетаниями клавиш, чтобы стать активным пользователем. Узнайте о новых возможностях и найдите экспертов по новейшим функциям. (Уровень: Основы Teams; Аудитория: все)'
+    summary: 'Изучите советы и сочетания клавиш, чтобы стать опытным пользователем. Узнайте о новых возможностях и найдите экспертного руководства по новейшим функциям. (Уровень: Основы Teams; Аудитория: Все)'
     url: https://aka.ms/TeamsProTips
-  - title: Перейти дальше вместе с собраниями Teams
+  - title: Идите дальше вместе с собраниями Teams
     imageSrc: https://learn.microsoft.com/office/media/icons/calendar-teams.svg
-    summary: 'Ознакомьтесь с ключевыми функциями собраний и вебинары Teams, включая средства совместной работы, переговорные комнаты и доступ к ресурсам собраний. (Уровень: Teams Go Further; Аудитория: все)'
+    summary: 'Узнайте о ключевых функциях собраний и вебинаров Teams, включая средства совместной работы, переговорные комнаты и доступ к ресурсам собраний. (Уровень: Teams идут дальше; Аудитория: Все)'
     url: https://aka.ms/MeetingsGoFurther
   - title: Настройка Teams с помощью приложений
     imageSrc: https://learn.microsoft.com/office/media/icons/blocks-teams.svg
-    summary: 'Узнайте, как интеграция приложений в Teams отображается в одном пользовательском интерфейсе и позволяет сотрудникам лучше работать вместе. (Уровень: Teams Go Further; Аудитория: все)'
+    summary: 'Узнайте, как интеграция приложений в Teams отображается в одном пользовательском интерфейсе и позволяет сотрудникам лучше работать вместе. (Уровень: Teams идут дальше; Аудитория: Все)'
     url: https://aka.ms/Teamsappstraining
   - title: Гибридные рабочие решения
     imageSrc: https://learn.microsoft.com/office/media/icons/hybrid-teams.svg
-    summary: 'Оставайтесь подключенными, безопасными и производительными по мере адаптации к новым способам работы. Узнайте, как эффективно работать в одном месте: собрания, звонки, чат, приложения и т. д. (Уровень: Teams Go Further; Аудитория: все)'
+    summary: 'Оставайтесь на связи, безопасно и продуктивно, адаптируясь к новым способам работы. Узнайте, как эффективно работать в одном месте: собрания, звонки, чат, приложения и многое другое. (Уровень: Teams идут дальше; Аудитория: Все)'
     url: https://aka.ms/HybridWorkTraining
-  - title: Повышение уровня совместной работы с Teams
+  - title: Расширение совместной работы с Teams
     imageSrc: https://learn.microsoft.com/office/media/icons/structure-teams.svg
-    summary: 'Узнайте, как максимально эффективно использовать каналы, чаты и подключенные приложения, чтобы улучшить взаимодействие и улучшить совместную работу между командами любого размера. (Уровень: Основы Teams; Аудитория: все)'
+    summary: 'Узнайте, как максимально эффективно использовать каналы, чаты и подключенные приложения, чтобы улучшить взаимодействие и углубить совместную работу между командами любого размера. (Уровень: Основы Teams; Аудитория: Все)'
     url: https://aka.ms/CollaborateInTeams
   - title: Teams для образовательных учреждений - Вебинары
     imageSrc: https://learn.microsoft.com/office/media/icons/education-tutorial-teams.svg
@@ -68,12 +68,12 @@ additionalContent:
   sections:
   - title: Дополнительное обучение
     items:
-    - title: Схема обучения специалистов по командной работы
-      summary: Совместная работа — это важный навык для современных рабочих усилий. Узнайте, как надежные функции в Microsoft Teams позволяют оставаться на связи и более эффективно работать с командой.
+    - title: Схема обучения специалиста по командной работе
+      summary: Совместная работа является жизненно важным навыком для сегодняшней рабочей силы. Узнайте, как надежные функции в Microsoft Teams позволяют оставаться на связи и эффективнее работать с командой.
       url: /training/paths/teamwork-specialist
     - title: Схема обучения специалиста по внедрению служб
-      summary: Схема обучения специалистов по внедрению служб Майкрософт содержит Teams и другие службы Microsoft 365. Узнайте, как принятия служб Майкрософт в вашей организации.
+      summary: Схема обучения Специалиста по внедрению служб Майкрософт включает Teams и другие службы Microsoft 365. Узнайте, как стимулировать внедрение служб Майкрософт в вашей организации.
       url: /training/paths/m365-service-adoption
     - title: Обучающие видео по запросу
-      summary: Нет времени для класса? Изучите наш каталог видео из служба поддержки Майкрософт для обучения по запросу.
-      url: https://support.microsoft.com/office/microsoft-teams-video-training-4f108e54-240b-4351-8084-b1089f0d21d7
+      summary: Нет времени на занятие? Ознакомьтесь с нашим каталогом видео с служба поддержки Майкрософт для обучения по запросу.
+      url: https://support.microsoft.com/office/training-1d5c12d3-37cb-44a0-ab21-5539ce9ccd5a
